design_dark.css
body {
  background-color: black;
  color: #34eb46; /* Neon green text color */
  font-family: "Courier New", monospace;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

header {
  background-color: #1c1c1c; /* Dark gray background color */
  padding: 20px;
  text-align: center;
  color: #34eb46; /* Neon green text color */
}

nav {
  background-color: black;
  padding: 20px;
  text-align: center;
  color: #34eb46; /* Neon green text color */
}

nav a {
  margin: 0 10px;
  color: #34eb46;
  text-decoration: none;
  cursor: pointer;
}

#dynamicContent {
  padding: 20px;
  text-align: center;
}

#content1,
#content2,
#content3 {
  background-color: black;
  color: #34eb46; /* Neon green text color */
  padding: 20px;
  display: none;
}

#Dropdown {
  background-color: black;
  color: #34eb46; /* Neon green text color */
  border: 2px solid #34eb46; /* Neon green border */
  padding: 5px;
  font-size: 16px;
}

button {
  background-color: #34eb46; /* Neon green background color */
  color: black;
  border: none;
  padding: 10px 20px;
  font-size: 16px;
  cursor: pointer;
}

button:hover {
  background-color: #2bc83b; /* Darker neon green on hover */
}

table {
  border-collapse: collapse;
  width: 100%;
}

table th, table td {
  border: 1px solid #34eb46; /* Neon green border */
  padding: 8px;
  text-align: left;
}

.table-container {
    max-height: 300px; /* Adjust the height as needed */
    overflow-y: auto;
    display: inline-flex;
    flex-direction: column;
    border: 2px solid #34eb46; /* Neon green border */
    border-radius: 5px;
}

#temperature-table {
    width: 100%;
    table-layout: fixed;
    text-align: center;
}

#temperature-table th,
#temperature-table td {
    border: 1px solid #34eb46; /* Neon green border */
    padding: 5px;
    color: #34eb46; /* Neon green text color */
    text-align: center;
}

#temperature-table thead th {
    position: sticky;
    top: 0;
    background-color: #1c1c1c;
    color: #34eb46; /* Neon green text color */
    z-index: 1;
    text-align: center;
}

#temperature-table tbody td {
    text-align: center;
    color: #34eb46; /* Neon green text color */
}


.section {
  max-width: 600px;
  margin: 0 auto;
  padding: 20px;
  background-color: #1c1c1c;
  border-radius: 5px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  text-align: center;
  margin-bottom: 20px;
}

.section-title {
  font-size: 24px;
  margin-bottom: 10px;
}

.section-description {
  font-size: 16px;
  line-height: 1.6;
  margin-bottom: 20px;
}

ul {
  list-style-type: none;
  padding-left: 0;
  margin-bottom: 20px;
  text-align: left;
}

ul li {
  margin-bottom: 10px;
}

.scrollable-box {
    max-height: 200px;
    overflow: auto;
    background-color: #1c1c1c; /* Dark gray background color */
    padding: 10px;
    margin-top: 10px;
}

.scrollable-box pre {
    color: #34eb46; /* Neon green text color */
}

.scrollable-box code {
    color: #34eb46; /* Neon green text color */
}

